[package]
name = "moss_rs"
authors = ["Ian Akotey"]
version = "0.2.0"
edition = "2021"

[lib]
name = "libmoss"
path = "src/lib.rs"

[[bin]]
name = "moss"
path = "src/cli/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "^2.1.0"
glob = "^0.3.0"
extend = "^1.1.2"
strum = "^0.24.1"
strum_macros = "0.24.1"
getset-scoped = "0.1.2"
clap = { version = "^3.2.17", features = ["derive"] }
wild = "2.1.0"
snafu = "0.7.1"
