[package]
name = "moss_rs"
authors = ["Ian Akotey"]
version = "0.4.1"
edition = "2021"

[lib]
name = "libmoss"
path = "src/lib.rs"

[[bin]]
name = "moss"
path = "src/cli/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "3.1.0"
glob = "0.3.1"
extend = "1.2.0"
strum = "0.26.2"
strum_macros = "0.26.4"
getset-scoped = "0.1.2"
clap = { version = "4.5.6", features = ["derive"] }
wild = "2.2.1"
snafu = "0.8.3"
regex = "1.10.4"
lazy_static = "1.4.0"
